# setup-environment-Jolx77

./: .gitignore  CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libstat/: CMakeLists.txt
lib/libstat/include/: static.h
lib/libstat/src/: static.c
src/: greetings.c  logic.c  main  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
